# CloudPlusCoin

./: Makefile  README.md  build.sh  test
src/: CMakeLists.txt  cpc.cpp  cpc.h  test.cpp
src/example/: test.cpp
src/example/gui/: MainWindow.qml  import.qrc  main.cpp
src/include/: cpc.h  raida_scheme.json
src/old/: cpc.cpp  cpc.h
